--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
   ],
   "buildpacks": [
     {
-      "url": "https://github.com/jesperfj/force-buildpack#beta"
+      "url": "https://github.com/jesperfj/force-buildpack"
     }
   ]
 }
